# txxt-rust

./: .gitignore  .info  CLAUDE.md  Cargo.toml  DETOKENIZER_SUMMARY.md  LICENSE  PRE_MERGE_CHECKLIST.txxt  README.md  annotations-review.txt  clippy.toml  debug_ref_markers.rs  debug_scanner_manual.rs  debug_simple_stretched.rs  debug_test.rs  debug_tokenizer_flow.rs  debug_tokens.rs  debug_underscore_issue.rs  debug_unicode_tokenization.rs  justfile  logo.txt  test_definition.txt  test_definition_correct.txt  test_nested_simple.txxt  test_session.txxt  test_session_simple.txxt  test_session_vs_content.txxt  test_simple.txxt  test_simple_annotation.txxt  test_simple_definition.txxt  test_simple_paragraph.txxt  test_two_sessions.txxt  test_underscore_logic  test_underscore_logic.rs  unicode_inline_issue_summary.txt
assets/: txxt-logo.monojson  txxt-logo.txt
docs/: not-markdown.txxt  parsing-101.txxt  the-parsing-challenge.txxt  tour.txxt  walkthrough.txxt
examples/: test_indent_scenarios.rs
examples_disabled/: complex_document.txxt  minimal_examples.txxt  simple_document.txxt  tokenizer_demo.rs
scripts/: gh-create-issue-from-md  gh-issue-from-file  gh-issue-from-txxt  merge-gitignores.sh  pre-commit  setup-rust.sh
src/: .info  api.rs  ast.rs  ast_debug.rs  block_grouping.rs  commands.rs  document_parser.rs  lib.rs  parser.rs  pipeline.rs  process.rs  processing_stages.rs  tokenizer.rs  transform.rs  tree.rs  validator.rs
tests/: README.md  adapter_integration.rs  annotation_parameter_integration_tests.rs  annotation_parameter_simple_test.rs  api_integration_tests.rs  assert_paragraph_complete_tests.rs  assertion_framework_tests.rs  block_grouper_tests.rs  block_grouping_integration.rs  block_grouping_integration_tests.rs  component_assertion_tests.rs  corpora.rs  debug_annotation_tokenization.rs  debug_blankline_tokenization.rs  debug_definition_marker.rs  debug_false_starts.rs  debug_pipeline.rs  debug_quoted_annotation_params.rs  debug_regex_patterns.rs  debug_stretched.rs  (+60 more)
(+944 files in other folders)
