[package]
name = "txxt"
version = "0.1.0"
edition = "2021"
description = "A library for handling .info annotation files"
license = "MIT OR Apache-2.0"
keywords = ["filesystem", "annotation", "metadata"]
categories = ["filesystem", "development-tools"]

[dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
terminal_size = "0.3"
atty = "0.2"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "info"
path = "src/bin/info.rs"