[package]
name = "txxt"
version = "0.1.0"
edition = "2021"
description = "A parser and processor for the txxt markup language"
license = "MIT OR Apache-2.0"
keywords = ["parser", "markup", "txxt", "text-processing"]
categories = ["parser-implementations", "text-processing"]

[dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
terminal_size = "0.3"
atty = "0.2"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "txxt"
path = "src/bin/txxt.rs"