[package]
name = "txxt"
version = "0.1.0"
edition = "2021"
description = "A parser and processor for the txxt markup language"
license = "MIT OR Apache-2.0"
keywords = ["parser", "markup", "txxt", "text-processing"]
categories = ["parser-implementations", "text-processing"]

[features]
# Enable AST adapter for bridging old to new AST
adapter = []

[dependencies]
walkdir = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
termcolor = "1.4"
terminal_size = "0.3"
atty = "0.2"
regex = "1.10"
quick-xml = "0.36"
chrono = { version = "0.4", features = ["serde"] }
ego-tree = "0.6"
clap = { version = "4.0", features = ["derive"] }

[dev-dependencies]
tempfile = "3.10"
regex = "1.10"
rstest = "0.18"
proptest = "1.4"
insta = "1.34"

[[bin]]
name = "txxt"
path = "src/bin/txxt.rs"

[[bin]]
name = "txxt-treeviz"
path = "src/bin/txxt-treeviz.rs"
